--- a/UPG.Admin/Pages/MonitorPages/View.razor
+++ b/UPG.Admin/Pages/MonitorPages/View.razor
@@ -15,27 +15,27 @@
                 <br />
                 <MudText>Pages: @monitor.Screen_type</MudText>
                 <br />
-                <MudText>Published: @monitor.Resolution_FHD</MudText>
+                <MudText>Resolution FHD: @monitor.Resolution_FHD</MudText>
                 <br />
-                <MudText>Published: @monitor.Aspect_ratio</MudText>
+                <MudText>Aspect ratio: @monitor.Aspect_ratio</MudText>
                 <br />
-                <MudText>Published: @monitor.Frame_rate</MudText>
+                <MudText>Frame rate: @monitor.Frame_rate</MudText>
                 <br />
-                <MudText>Published: @monitor.Response_time</MudText>
+                <MudText>Response time: @monitor.Response_time</MudText>
                 <br />
-                <MudText>Published: @monitor.Interface</MudText>
+                <MudText>Interface: @monitor.Interface</MudText>
                 <br />
-                <MudText>Published: @monitor.Viewing_angle</MudText>
+                <MudText>Viewing angle: @monitor.Viewing_angle</MudText>
                 <br />
-                <MudText>Published: @monitor.VESA_Mount</MudText>
+                <MudText>VESA Mount: @monitor.VESA_Mount</MudText>
                 <br />
-                <MudText>Published: @monitor.Technologies</MudText>
+                <MudText>Technologies: @monitor.Technologies</MudText>
                 <br />
-                <MudText>Published: @monitor.Adjustment</MudText>
+                <MudText>Adjustment: @monitor.Adjustment</MudText>
                 <br />
-                <MudText>Published: @monitor.HDR</MudText>
+                <MudText>HDR: @monitor.HDR</MudText>
                 <br />
-                <MudText>Published: @monitor.Guarantee_period</MudText>
+                <MudText>Guarantee period: @monitor.Guarantee_period</MudText>
                 <br />
             </MudItem>
             <MudItem xs="6">
