--- a/UPG.Admin/Layout/NavMenu.razor
+++ b/UPG.Admin/Layout/NavMenu.razor
@@ -11,12 +11,10 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-house-door"></i></span>
+                    <span>Home</span>
+                </div>
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -24,6 +22,22 @@
                 <div class="f-link d-flex justify-content-start" style="align-items: center">
                     <span class="icon"><i class="bi bi-display"></i></span>
                     <span>Monitors</span>
+                </div>
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="mices">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-mouse2"></i></span>
+                    <span>Mices</span>
+                </div>
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="laptops">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-laptop"></i></span>
+                    <span>Laptops</span>
                 </div>
             </NavLink>
         </div>
