--- a/UPG.Admin/Pages/HeadphonesPage/View.razor
+++ b/UPG.Admin/Pages/HeadphonesPage/View.razor
@@ -9,29 +9,29 @@
                 <br />
                 <MudText>Price: @headphones.Price</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_type</MudText>
+                <MudText>Headphone_type: @headphones.Headphone_type</MudText>
                 <br />
-                <MudText>Price: @headphones.Operating_mode</MudText>
+                <MudText>Operating_mode: @headphones.Operating_mode</MudText>
                 <br />
-                <MudText>Price: @headphones.Sound_type</MudText>
+                <MudText>Sound_type: @headphones.Sound_type</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_frequency_range</MudText>
+                <MudText>Headphone_frequency_range: @headphones.Headphone_frequency_range</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_impedance</MudText>
+                <MudText>Headphone_impedance: @headphones.Headphone_impedance</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_sensitivity</MudText>
+                <MudText>Headphone_sensitivity: @headphones.Headphone_sensitivity</MudText>
                 <br />
-                <MudText>Price: @headphones.Microphone_frequency_range</MudText>
+                <MudText>Microphone_frequency_range: @headphones.Microphone_frequency_range</MudText>
                 <br />
-                <MudText>Price: @headphones.Connection_or_connectors</MudText>
+                <MudText>Connection_or_connectors: @headphones.Connection_or_connectors</MudText>
                 <br />
-                <MudText>Price: @headphones.Sound_card</MudText>
+                <MudText>Sound_card: @headphones.Sound_card</MudText>
                 <br />
-                <MudText>Price: @headphones.Wire_length</MudText>
+                <MudText>Wire_length: @headphones.Wire_length</MudText>
                 <br />
-                <MudText>Price: @headphones.Backlight</MudText>
+                <MudText>Backlight: @headphones.Backlight</MudText>
                 <br />
-                <MudText>Price: @headphones.Weight</MudText>
+                <MudText>Weight: @headphones.Weight</MudText>
                 <br />
             </MudItem>
             <MudItem xs="6">
