--- a/MVCLayer/Views/Home/Monitors.cshtml
+++ b/MVCLayer/Views/Home/Monitors.cshtml
@@ -178,7 +178,7 @@
                         @foreach(var item in Model)
                         {
                            <a class="discount-item" href="../item.html">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <img src="@item.ImageUrls[0]" alt="armchair" />
                             <p>@item.Name</p>
                             <span>
                                 <i class="fa-solid fa-star"></i>
