--- a/UPG.Admin/Pages/GamingBuiildsPages/View.razor
+++ b/UPG.Admin/Pages/GamingBuiildsPages/View.razor
@@ -3,39 +3,32 @@
     <DialogContent>
         <MudGrid>
             <MudItem xs="6">
-                <MudText>Title: @headphones.Name</MudText>
+                <MudText>Title: @gamingBuilds.Name</MudText>
                 <br />
-                <MudText>Author: @headphones.BrandName</MudText>
+                <MudText>Author: @gamingBuilds.BrandName</MudText>
                 <br />
-                <MudText>Price: @headphones.Price</MudText>
+                <MudText>Price: @gamingBuilds.Price</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_type</MudText>
+                <MudText>MotherBoard: @gamingBuilds.MotherBoard</MudText>
                 <br />
-                <MudText>Price: @headphones.Operating_mode</MudText>
+                <MudText>CPU: @gamingBuilds.CPU</MudText>
                 <br />
-                <MudText>Price: @headphones.Sound_type</MudText>
+                <MudText>Cooler: @gamingBuilds.Cooler</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_frequency_range</MudText>
+                <MudText>RAM: @gamingBuilds.RAM</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_impedance</MudText>
+                <MudText>SSD: @gamingBuilds.SSD</MudText>
                 <br />
-                <MudText>Price: @headphones.Headphone_sensitivity</MudText>
+                <MudText>HDD: @gamingBuilds.HDD</MudText>
                 <br />
-                <MudText>Price: @headphones.Microphone_frequency_range</MudText>
+                <MudText>GPU: @gamingBuilds.GPU</MudText>
                 <br />
-                <MudText>Price: @headphones.Connection_or_connectors</MudText>
+                <MudText>PSU: @gamingBuilds.PSU</MudText>
                 <br />
-                <MudText>Price: @headphones.Sound_card</MudText>
-                <br />
-                <MudText>Price: @headphones.Wire_length</MudText>
-                <br />
-                <MudText>Price: @headphones.Backlight</MudText>
-                <br />
-                <MudText>Price: @headphones.Weight</MudText>
-                <br />
+                <MudText>Case: @gamingBuilds.Case</MudText>
             </MudItem>
             <MudItem xs="6">
-                @foreach (var img in headphones.ImageUrls)
+                @foreach (var img in gamingBuilds.ImageUrls)
                 {
                     <MudImage ObjectFit="ObjectFit.Contain"
                               Src="img"
@@ -50,7 +43,7 @@
 
         <MudSpacer />
         <MudText Typo="Typo.subtitle1" Class="my-5">
-            <MudTextField ReadOnly="true" @bind-Value="headphones.Description" Lines="5" Label="Description" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+            <MudTextField ReadOnly="true" @bind-Value="gamingBuilds.Description" Lines="5" Label="Description" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
         </MudText>
     </DialogContent>
 </MudDialog>
@@ -63,15 +56,15 @@
     [Parameter]
     public string Id { get; set; }
 
-    HeadphonesDTO headphones = new HeadphonesDTO();
+    GamingBuildsDTO gamingBuilds = new GamingBuildsDTO();
 
     protected override async Task OnInitializedAsync()
     {
-        var response = await httpClient.GetAsync(Helper.URL + "headphones/" + Id);
+        var response = await httpClient.GetAsync(Helper.URL + "gamingBuilds/" + Id);
 
         if (response.IsSuccessStatusCode)
         {
-            headphones = await response.Content.ReadFromJsonAsync<HeadphonesDTO>();
+            gamingBuilds = await response.Content.ReadFromJsonAsync<GamingBuildsDTO>();
         }
     }
 }
