--- a/UPG.Admin/Layout/NavMenu.razor
+++ b/UPG.Admin/Layout/NavMenu.razor
@@ -44,7 +44,7 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="armchairs">
                 <div class="f-link d-flex justify-content-start" style="align-items: center">
-                    <span class="icon"><i class="bi bi-armchair"></i></span>
+                    <span class="icon"></span>
                     <span>Armchairs</span>
                 </div>
             </NavLink>
