--- a/UPG.Admin/_Imports.razor
+++ b/UPG.Admin/_Imports.razor
@@ -19,8 +19,8 @@
 @using UPG.Admin.Models.HeadphonesDTOs
 @using UPG.Admin.Models.KeyboardDTOs
 @using UPG.Admin.Models.HousingDTOs
+@using UPG.Admin.Models.RAMDTOs
 @using UPG.Admin.Common
 @using System.Text
 @using System.Text.Json
 @using Newtonsoft.Json
-@* @using Application.Helpers; *@
