--- a/UPG.Admin/_Imports.razor
+++ b/UPG.Admin/_Imports.razor
@@ -19,6 +19,7 @@
 @using UPG.Admin.Models.HeadphonesDTOs
 @using UPG.Admin.Models.KeyboardDTOs
 @using UPG.Admin.Models.HousingDTOs
+@using UPG.Admin.Models.MousePadDTOs
 @using UPG.Admin.Common
 @using System.Text
 @using System.Text.Json
