--- a/UPG.Admin/_Imports.razor
+++ b/UPG.Admin/_Imports.razor
@@ -20,6 +20,9 @@
 @using UPG.Admin.Models.KeyboardDTOs
 @using UPG.Admin.Models.HousingDTOs
 @using UPG.Admin.Models.MousePadDTOs
+@using UPG.Admin.Models.RAMDTOs
+@using UPG.Admin.Models.PowerSuppliesDTOs
+@using UPG.Admin.Models.TablesForgamersDTOs
 @using UPG.Admin.Common
 @using System.Text
 @using System.Text.Json
