--- a/UPG.Admin/Layout/NavMenu.razor
+++ b/UPG.Admin/Layout/NavMenu.razor
@@ -114,6 +114,30 @@
                 </div>
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rams">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-laptop"></i></span>
+                    <span>RAM</span>
+                </div>
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="powersupplies">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-keyboard"></i></span>
+                    <span>Power Supplies</span>
+                </div>
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tablesforgamers">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-keyboard"></i></span>
+                    <span>Tables</span>
+                </div>
+            </NavLink>
+        </div>
     </nav>
 </div>
 
