--- a/UPG.Admin/Pages/TablesForGamersPages/Add.razor
+++ b/UPG.Admin/Pages/TablesForGamersPages/Add.razor
@@ -1,26 +1,26 @@
-﻿@page "/rams/add"
-
+﻿@page "/tablesforgamers/add"
 
 <MudGrid>
     <MudItem xs="2"></MudItem>
     <MudItem xs="8">
         <MudCard Class="mt-4">
-            <MudCardHeader Class="d-flex justify-center"> <h3>Add new RAM</h3> </MudCardHeader>
+            <MudCardHeader Class="d-flex justify-center"> <h3>Add new Monitor</h3> </MudCardHeader>
             <MudCardContent>
                 <MudGrid>
                     <MudItem xs="12">
-                        <MudTextField @bind-Value="ram.Name" Label="Name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="ram.BrandName" Label="Brand name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="ram.Price" Label="Price" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="ram.Capacity" Label="Capacity" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="ram.Memory_frequency" Label="Memory Frequency" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="ram.Technologies" Label="Technologies" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="ram.Timings" Label="Timings" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.Name" Label="Name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.BrandName" Label="Brand name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.Price" Label="Price" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.Max_load_up" Label="Max Load up" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.Dimensions" Label="Dimensions" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.I_or_O_panel" Label="I or O Panel" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.Weight" Label="Weight" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="tables.Table_adjustment" Label="Table Adjustment" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
                     </MudItem>
-                    <MudItem>
+                    <MudItem xs="6">
                         <MudItem Class="d-flex">
-                            <MudSwitch @bind-Value="ram.Backlight" ThumbIcon="@(ram.Backlight==true ? Icons.Material.Filled.Done : Icons.Material.Filled.Close)" ThumbIconColor="@(ram.Backlight==true ? Color.Success : Color.Error)">Backlight</MudSwitch>
-                        </MudItem>
+                            <MudSwitch @bind-Value="tables.Backlight" ThumbIcon="@(tables.Backlight==true ? Icons.Material.Filled.Done : Icons.Material.Filled.Close)" ThumbIconColor="@(tables.Backlight==true ? Color.Success : Color.Error)">HDR</MudSwitch>
+                            </MudItem>
                         <InputFile OnChange="@LoadFile" class="form-control" multiple />
                         @if (errors.Count > 0)
                         {
@@ -33,10 +33,10 @@
                                 }
                             </ul>
                         }
-
+                        
                     </MudItem>
                 </MudGrid>
-                <MudTextField @bind-Value="ram.Description" Lines="5" Label="Description" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                <MudTextField @bind-Value="tables.Description" Lines="5" Label="Description" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
             </MudCardContent>
             <MudCardActions Class="d-flex justify-center">
                 <MudButton @onclick="Cancel" Variant="Variant.Filled">Cancel</MudButton>
@@ -51,7 +51,7 @@
     @inject NavigationManager navigation
     @inject HttpClient httpClient
     @inject ISnackbar Snackbar
-    AddRAMDto ram = new();
+    AddTablesForGamersDto tables = new();
     private int maxAllowedFiles = 5;
     private long maxFileSize = 1024 * 5 * 1024;
     private List<string> errors = new();
@@ -59,20 +59,20 @@
 
     private void Cancel()
     {
-        navigation.NavigateTo("/rams");
+        navigation.NavigateTo("/tablesforgamers");
     }
 
     private async void Save()
     {
-        var json = JsonConvert.SerializeObject(ram);
+        var json = JsonConvert.SerializeObject(tables);
 
         var request = new StringContent(json, Encoding.UTF8, "application/json");
 
-        var response = await httpClient.PostAsync(Helper.URL + "ram", request);
+        var response = await httpClient.PostAsync(Helper.URL + "tablesforgamers", request);
 
         if (response.IsSuccessStatusCode)
         {
-            Snackbar.Add("RAM added successfully!", Severity.Success);
+            Snackbar.Add("Table added successfully!", Severity.Success);
             Cancel();
         }
         else if (response.StatusCode == System.Net.HttpStatusCode.BadRequest)
@@ -96,7 +96,7 @@
             errors.Add($"Error: Attempting to upload {e.FileCount} files, but only {maxAllowedFiles} are allowed!");
             return;
         }
-
+        
         using (var formData = new MultipartFormDataContent())
         {
             foreach (var file in e.GetMultipleFiles(maxAllowedFiles))
