--- a/UPG.Admin/Pages/TablesForGamersPages/Tables.razor
+++ b/UPG.Admin/Pages/TablesForGamersPages/Tables.razor
@@ -1,9 +1,9 @@
-﻿@page "/rams"
+﻿@page "/tablesforgamers"
 
 
-<MudTable Items="@Elements" Dense="true" Hover="true" Bordered="true" Striped="true" Filter="new Func<RAMDto,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
+<MudTable Items="@Elements" Dense="true" Hover="true" Bordered="true" Striped="true" Filter="new Func<TablesForGamersDto,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">RAMs</MudText>
+        <MudText Typo="Typo.h6">Monitors</MudText>
         <MudSpacer />
         <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         <MudSpacer />
@@ -34,25 +34,25 @@
 @code {
     @inject HttpClient httpClient
     private string searchString1 = "";
-    private RAMDto selectedItem1 = null;
+    private TablesForGamersDto selectedItem1 = null;
     @inject NavigationManager navigate
     @inject IDialogService DialogService
     @inject ISnackbar Snackbar
 
-    private List<RAMDto> Elements = new List<RAMDto>();
+    private List<TablesForGamersDto> Elements = new List<TablesForGamersDto>();
 
     protected override async Task OnInitializedAsync()
     {
-        var response = await httpClient.GetAsync(Helper.URL + "ram");
+        var response = await httpClient.GetAsync(Helper.URL + "tablesforgamers");
         if (response.IsSuccessStatusCode)
         {
-            Elements = await response.Content.ReadFromJsonAsync<List<RAMDto>>();
+            Elements = await response.Content.ReadFromJsonAsync<List<TablesForGamersDto>>();
         }
     }
 
-    private bool FilterFunc1(RAMDto element) => FilterFunc(element, searchString1);
+    private bool FilterFunc1(TablesForGamersDto element) => FilterFunc(element, searchString1);
 
-    private bool FilterFunc(RAMDto element, string searchString)
+    private bool FilterFunc(TablesForGamersDto element, string searchString)
     {
         if (string.IsNullOrWhiteSpace(searchString))
             return true;
@@ -65,7 +65,7 @@
 
     private void AddPage()
     {
-        navigate.NavigateTo("rams/add");
+        navigate.NavigateTo("tablesforgamers/add");
     }
     private void OpenView(int id)
     {
@@ -73,12 +73,12 @@
         parameters.Add(x => x.Id, id.ToString());
         var options = new DialogOptions() { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
 
-        DialogService.Show<View>("RAM details", parameters, options);
+        DialogService.Show<View>("Tables For Gamers details", parameters, options);
     }
 
     private void OpenEditPage(int id)
     {
-        navigate.NavigateTo($"rams/edit/{id}");
+        navigate.NavigateTo($"tablesforgamers/edit/{id}");
     }
 
     private async void Delete(int id)
@@ -88,22 +88,22 @@
 
         if (!dialogResult.Cancelled)
         {
-            var response = await httpClient.DeleteAsync(Helper.URL + "ram/" + id);
+            var response = await httpClient.DeleteAsync(Helper.URL + "tablesforgamers/" + id);
             if (response.IsSuccessStatusCode)
             {
-                Snackbar.Add("RAM successfully deleted!", Severity.Success);
+                Snackbar.Add("Table successfully deleted!", Severity.Success);
                 Elements.RemoveAll(i => i.Id == id);
                 StateHasChanged();
             }
             else if (response.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                Snackbar.Add("RAM not found!", Severity.Warning);
-                navigate.NavigateTo("/rams");
+                Snackbar.Add("Table not found!", Severity.Warning);
+                navigate.NavigateTo("/tablesforgamers");
             }
             else
             {
                 Snackbar.Add("Some problem with the server", Severity.Error);
-                navigate.NavigateTo("/rams");
+                navigate.NavigateTo("/tablesforgamers");
             }
         }
     }
