--- a/UPG.Admin/Pages/TablesForGamersPages/Add.razor
+++ b/UPG.Admin/Pages/TablesForGamersPages/Add.razor
@@ -4,7 +4,7 @@
     <MudItem xs="2"></MudItem>
     <MudItem xs="8">
         <MudCard Class="mt-4">
-            <MudCardHeader Class="d-flex justify-center"> <h3>Add new Monitor</h3> </MudCardHeader>
+            <MudCardHeader Class="d-flex justify-center"> <h3>Add new Table</h3> </MudCardHeader>
             <MudCardContent>
                 <MudGrid>
                     <MudItem xs="12">
