ko'p o'zgarishlar bo'ldi

--- a/MVCLayer/Views/Home/Decor.cshtml
+++ b/MVCLayer/Views/Home/Decor.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Decor";
 }
+@model IEnumerable<DTOS.AccessoriesDtos.AccessoriesDto>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -143,160 +144,26 @@
                 </div>
                 <div class="laptops">
                     <div class="diskount-items">
-
-                        <a class="discount-item" href="../item.html">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="../item.html">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="../item.html">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
+                        @foreach (var i in Model)
+                        {
+                            <a class="discount-item" href="../item.html">
+                                <img src="@($"https://localhost:7010/{i.ImageUrls.FirstOrDefault()}")" alt=@($"https://localhost:7010/{i.ImageUrls.FirstOrDefault()}") />
+                                <p>@i.Name</p>
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                                <s>@i.Price сум</s>
+                                <h2>@i.Price сум</h2>
+                                <div class="services">
+                                    <button class="main-btn">КУПИТЬ</button>
+                                    <i class="fa-solid fa-list"></i>
+                                </div>
+                            </a>
+                        }
                     </div>
                 </div>
             </div>
